Добавлены интеграционные запросы